fixed footer spacing and added new font

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,10 +1,17 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Permanent+Marker&family=Playfair+Display:ital@0;1&display=swap');
 
 .email{
     text-decoration: none;
-    
-  } 
-
+    color: black;
+    font-weight: bold;
+    font-family: 'Permanent Marker', sans-serif;
+    } 
+/* .follow{
+    color: black;
+    font-weight: bold;
+    font-family: 'Permanent Marker', sans-serif;
+    font-size: 20px;
+} */
 
 li {
     font-size: 10px;
@@ -12,6 +19,9 @@ li {
 
 p{
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
+}
+.footer-container{
+    margin: 10px;
 }
